# EMG_MMG_Preprocessing

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
emg_mmg_preprocessing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
preprocessing_pipeline/: load_data.py  preprocess_data.py
src/emg_mmg_preprocessing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/preprocessing_pipeline/: calculate_features.py  preprocess_data.py  utils.py
