[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emg-mmg-preprocessing"
version = "0.1.0"
description = "Reusable EMG/MMG preprocessing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.15",
    "matplotlib>=3.10",
    "mne>=1.9.0",
    "pyctf @ https://github.com/derkoellner/pyctf/releases/download/v0.1.1/pyctf-0.1.0-cp310-cp310-linux_x86_64.whl"
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "preprocessing_pipeline",
]

[project.urls]
"Homepage" = "https://github.com/derkoellner/EMG_MMG_Preprocessing"
"Source" = "https://github.com/derkoellner/EMG_MMG_Preprocessing"